# navtool

./: .gitattributes  .gitignore  CHANGELOG.md  CHART_BROWSER_ENHANCEMENT_SUMMARY.md  CHART_BROWSER_INTEGRATION.md  CPU.20250909.175407.51763.0.001.cpuprofile  CPU.20250909.181030.95446.0.001.cpuprofile  ELLIOTT_BAY_CHART_RENDERING_COMPLETE_IMPLEMENTATION.md  ELLIOTT_BAY_CHART_RENDERING_ISSUE_ANALYSIS.md  GPS_INTEGRATION_IMPLEMENTATION.md  GPS_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ISSUE_129_SOLUTION.md  ISSUE_182_COMPLETION_REPORT.md  ISSUE_182_PHASE_1_COMPLETION_REPORT.md  ISSUE_27_COMPLETION_CHECKLIST.md  ISSUE_27_GPS_INTEGRATION_SUMMARY.md  Navtool.sln  PHASE_3_2_TDD_TESTS_COMPLETE.md  PHASE_3_3_CORE_IMPLEMENTATION_COMPLETE.md  PHASE_3_4_UI_INTEGRATION_PARTIAL.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_4_MVP_COMPLETE.md  PLATFORMS.md  README.md  S57_IMPLEMENTATION_ANALYSIS.md  S57_IMPLEMENTATION_STATUS.md  SPATIAL_INTERSECTION_FIX.md  TESTING_HELPERS.md  TEST_FAILURE_REMEDIATION_PLAN.md  TEST_STRATEGY.md  analysis_options.yaml  chartservice-spec.md  debug_test_data.dart  failures.txt  final_test_results.txt  full_test_results.json  package-lock.json  plan.md  pubspec.yaml  (+8 more)
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/ISSUE_TEMPLATE/: test-hang.md
.github/chatmodes/: TDD.chatmode.md  plan.chatmode.md  spec.chatmode.md
.github/instructions/: frontend.instructions.md
.github/prompts/: mockup.prompt.md
.github/workflows/: binary-builds.yml  noaa_integration_tests.yml
.specify/memory/: constitution.md
android/app/: build.gradle.kts
assets/: icon.png.placeholder
assets/charts/: .gitkeep
assets/s57/: attributes.json  object_classes.json
coverage/: lcov.info
docs/: PHASE2_COMPLETION_SUMMARY.md  S57_TEST_FIXTURES_USAGE.md  chart_storage_architecture.md  chart_test_data_inventory.md  database_migration_v2.md  depth_datum_overview.md  download_manager_user_guide.md  download_phase2_status.md  download_resume_integrity_architecture.md  http_client_integration.md  marine_error_handling.md  navigation_service_implementation.md  noaa_api_client_usage.md  raspberry_pi_test_fixes.md  retry_logic_implementation.md  s52_implementation.md  s57_format_overview.md  s57_migration_guide.md  s57_parser_completion_checklist.md  s57_troubleshooting.md  storage_service_implementation.md  test-debugging-guide.md  vscode_window_chrome_implementation.md
docs/benchmarks/: s57_benchmarks.md
docs/testing/: fixture_path_standards.md  s57_test_fixtures_guide.md
integration_test/: README.md  gps_integration_test.dart  noaa_real_endpoint_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  navtool.dart  s57.dart
lib/app/: app.dart  routes.dart
lib/models/: chart_manifest.dart  geo_types.dart
lib/parser/: coastline_parser.dart
lib/renderer/: coastline_renderer.dart
lib/services/: coastline_data_manager.dart
lib/tools/: download_noaa_chart_entry.dart  download_noaa_chart_logic.dart
lib/widgets/: app_icon.dart  gps_status_widget.dart  macos_native_menu_bar.dart  macos_status_bar.dart  main_menu.dart  version_text.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
native/Navtool.RouterBridge/: CMakeLists.txt
native/Navtool.RouterBridge/include/: navtool_router_bridge.h
native/Navtool.RouterBridge/src/: navtool_router_bridge.cpp
native/Navtool.RouterBridge/tests/: bridge_tests.cpp
scripts/: build-native.ps1  build-native.sh  convert_original_svg.py  convert_svg_to_png.py  create_nautical_icon.py  publish.ps1  publish.sh  refresh_baseline.sh  run.ps1  run.sh  setup_linux_desktop.sh  test.sh  validate_elliott_bay_rendering.sh
specs/001-phase-4-elliott/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-stuck-tests/: IMPLEMENTATION_SUMMARY.md  TEST_TIMEOUT_INVESTIGATION.md  baseline-measurements.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/Navtool.App/: App.axaml  App.axaml.cs  Navtool.App.csproj  Program.cs  ViewLocator.cs  app.manifest
src/Navtool.Core/: Forecasts.cs  Geography.cs  Routing.cs  RoutingWorkflow.cs  SharedRouteTimeline.cs
src/Navtool.Infrastructure/: AtomicFileCache.cs  EcmwfOpenDataForecastProvider.cs  INativeRoutingPreflight.cs  NativeGribInspector.cs  NativeRouterBridge.cs  Navtool.Infrastructure.csproj  NoaaGfsForecastProvider.cs  RollingFileLoggerProvider.cs
test/: debug_coalne_test.dart  debug_s57_coordinates.dart  flutter_test_config.dart  http_client_test.dart  platform_gps_test.dart  simple_state_test.dart  state_management_test.dart  widget_test.dart
test/app/: routes_test.dart  routes_test.mocks.dart
test/debug/: bounds_query_debug.dart  chart_bounds_analysis_test.dart  chart_bounds_inspector_simple_test.dart  chart_bounds_inspector_test.dart  issue_129_complete_solution_test.dart  noaa_api_structure_inspector.dart  noaa_bounds_inspector.dart  noaa_chart_bounds_debug_test.dart  noaa_endpoint_verification_test.dart  real_noaa_bounds_analysis_test.dart  url_construction_analysis_test.dart  washington_chart_coverage_test.dart  washington_spatial_intersection_test.dart
test/doc/: markdown_link_validator_test.dart  readme_quick_start_test.dart
test/download/: download_service_phase1_test.dart
test/fixtures/: S57_TEST_FIXTURES_USAGE_GUIDE.md  enhanced_noaa_catalog.json  noaa_catalog_sample.json  state_boundaries_sample.json
test/helpers/: download_test_utils.dart  flakiness_guard.dart  noaa_test_utils.dart  progress_matchers.dart  timing_harness.dart  verify_helpers.dart
test/integration/: README.md  app_integration_test.dart  app_integration_test.mocks.dart  (+27 more)
tools/: bench_s57.dart  coverage_summary.dart  demo_chart_storage.dart  download_enc_data.py  download_enc_direct.py  download_gshhg.py  download_noaa_chart.dart  download_noaa_data.py  download_osm_coastline.py  generate_iso8211_fixture.dart
windows/: CMakeLists.txt
(+446 files in other folders)
